# QtTorch

./: CMakeLists.txt  README.md  main.cpp  main.h  model_trace.py
